--- a/Project1/src/index.html
+++ b/Project1/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<link href="./src/bootstrap/css/bootstrap.min.css" rel="stylesheet"><html>
 <head>
   <meta charset="utf-8">
   <title>Angular2 Project1</title>
